@@ -20,8 +20,8 @@
  * Since I will be keeping this tutorial up-to-date for the foreseeable future,
  * I am going to work with the copy of the class provided in WordPress core.
  */
-if ( ! class_exists( 'WP_List_Table' ) ) {
-	require_once( ABSPATH . 'wp-admin/includes/class-wp-list-table.php' );
+if ( ! class_exists( 'WP_Users_List_Table' ) ) {
+	require_once( ABSPATH . 'wp-admin/includes/class-wp-users-list-table.php' );
 }
 
 /************************** CREATE A PACKAGE CLASS *****************************
@@ -38,11 +38,12 @@ if ( ! class_exists( 'WP_List_Table' ) ) {
  * Our theme for this list table is going to be movies.
  */
 
-class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
+class CoursePress_Helper_Table_CourseStudent extends WP_Users_List_Table {
 
 	private $course_id = 0;
 	private $add_new = false;
 	private $students = array();
+	private $can_withdraw_students = false;
 
 	/** ************************************************************************
 	 * REQUIRED. Set up a constructor that references the parent constructor. We
@@ -54,7 +55,36 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 			'plural' => __( 'Students', 'CP_TD' ),
 			'ajax' => false,// should this table support ajax?
 		) );
+		add_filter( 'user_row_actions', array( $this, 'student_row_actions' ), 10, 2 );
+		add_filter( 'manage_users_custom_column', array( $this, 'columns' ), 10, 3 );
+		$course_id = isset( $_GET['id'] ) ? (int) $_GET['id'] : null;
+		if ( CoursePress_Data_Course::is_course( $course_id ) ) {
+			$this->course_id = $course_id;
+			$this->can_withdraw_students = CoursePress_Data_Capabilities::can_withdraw_students( $course_id );
+		}
+	}
 
+	private function get_student( $ID ) {
+		foreach ( $this->items as $item ) {
+			if ( $ID == $item->ID ) {
+				return $item;
+			}
+		}
+		return null;
+	}
+
+	public function columns( $content, $column_name, $item_id ) {
+		switch ( $column_name ) {
+			case 'display_name':
+			case 'first_name':
+			case 'last_name':
+			return sprintf(
+				'%s', get_user_option( $column_name, $item_id )
+			);
+			case 'certificates':
+			return $this->column_certificates( $item_id );
+		}
+		return $content;
 	}
 
 	public function set_course( $id ) {
@@ -93,12 +123,11 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 		$course_id = isset( $_GET['id'] ) ? (int) $_GET['id'] : null;
 		$columns = array(
 			'cb' => '<input type="checkbox" />',
-			'ID' => __( 'ID', 'CP_TD' ),
-			'display_name' => __( 'Username', 'CP_TD' ),
+			'username' => __( 'Username', 'CP_TD' ),
+		    'display_name' => __( 'Display Name', 'CP_TD' ),
 			'first_name' => __( 'First Name', 'CP_TD' ),
 			'last_name' => __( 'Last Name', 'CP_TD' ),
 			'certificates' => __( 'Certified', 'CP_TD' ),
-			'actions' => __( 'Withdraw', 'CP_TD' ),
 		);
 
 		if ( ! CoursePress_Data_Capabilities::can_withdraw_students( $course_id ) ) {
@@ -127,7 +156,13 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 	 * @return array An associative array containing all the columns that should be sortable: 'slugs'=>array('data_values',bool)
 	 **************************************************************************/
 	public function get_sortable_columns() {
-		return array( 'title' => array( 'title', false ) );
+		$c = array(
+			'display_name' => array( 'display_name', false ),
+			'first_name' => array( 'first_name', false ),
+			'last_name' => array( 'last_name', false ),
+			'username' => array( 'login', false ),
+		);
+		return $c;
 	}
 
 	/** ************************************************************************
@@ -145,7 +180,7 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 		);
 	}
 
-	public function column_ID( $item ) {
+	public function student_row_actions( $actions, $item ) {
 		$this->students[] = $item->ID;
 		$profile_link = CoursePress_Data_Student::get_admin_profile_url( $item->ID );
 		$workbook_link = add_query_arg(
@@ -165,15 +200,11 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 				admin_url( 'edit.php' )
 			)
 		);
-		$title = sprintf(
-			'<strong><a href="%s">%d</a></strong>',
-			esc_url( $profile_link ),
-			$item->ID
-		);
 
 		$actions = array(
-			'profile' => sprintf( '<a href="%s">%s</a>', $profile_link, __( 'Student Profile', 'CP_TD' ) ),
-			'workbook' => sprintf( '<a href="%s">%s</a>', $workbook_link, __( 'Workbook', 'CP_TD' ) ),
+			'id' => sprintf( '<span>%s</span>', esc_html( sprintf( __( 'ID: %d', 'CP_TD' ), $item->ID ) ) ),
+			'profile' => sprintf( '<a href="%s">%s</a>', $profile_link, esc_html__( 'Student Profile', 'CP_TD' ) ),
+			'workbook' => sprintf( '<a href="%s">%s</a>', $workbook_link, esc_html__( 'Workbook', 'CP_TD' ) ),
 		);
 
 		if ( current_user_can( 'edit_users' ) ) {
@@ -191,37 +222,21 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 			);
 		}
 
-		return $title . $this->row_actions( $actions );
+		if ( $this->can_withdraw_students ) {
+			$actions['trash'] = sprintf(
+				'<a href="#" class="withdraw-student" data-id="%s" data-nonce="%s">%s</a>',
+				esc_attr( $item->ID ),
+				esc_attr( wp_create_nonce( 'withdraw-single-student-'.$item->ID ) ),
+				esc_html__( 'Withdraw', 'CP_TD' )
+			);
+		}
+		return $actions;
 	}
 
 	public function column_display_name( $item ) {
 		return sprintf(
 			'%s', $item->display_name
 		);
-	}
-
-	public function column_first_name( $item ) {
-		return sprintf(
-			'%s', get_user_option( 'first_name', $item->ID )
-		);
-	}
-
-	public function column_last_name( $item ) {
-		return sprintf(
-			'%s', get_user_option( 'last_name', $item->ID )
-		);
-	}
-
-	public function column_actions( $item ) {
-		$course_id = isset( $_GET['id'] ) ? (int) $_GET['id'] : null;
-		$nonce = wp_create_nonce( 'withdraw-single-student' );
-		$withdraw = sprintf(
-			'<a href="" class="withdraw-student" data-id="%s" data-nonce="%s"><i class="fa fa-times-circle remove-btn"></i></a>', $item->ID, $nonce
-		);
-
-		if ( CoursePress_Data_Capabilities::can_withdraw_students( $course_id ) ) {
-			echo $withdraw;
-		}
 	}
 
 	/** ************************************************************************
@@ -261,8 +276,12 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 
 		// Could use the Course Model methods here, but lets try stick to one query
 		$query_args = array(
-			'meta_key' => $course_meta_key,
-			'meta_compare' => 'EXISTS',
+			'meta_query' => array(
+				array(
+					'key' => $course_meta_key,
+					'compare' => 'EXISTS',
+				),
+			),
 			'number' => $per_page,
 			'offset' => $offset,
 		);
@@ -270,6 +289,30 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 
 		if ( ! empty( $usersearch ) ) {
 			$query_args['search'] = '*' . $usersearch . '*';
+		}
+
+		if ( isset( $_REQUEST['orderby'] ) ) {
+			$query_args['orderby'] = $_REQUEST['orderby'];
+			switch ( $_REQUEST['orderby'] ) {
+				case 'first_name':
+				case 'last_name':
+					$query_args['meta_query'] = array(
+					'relation' => 'AND',
+					array(
+						'key' => $_REQUEST['orderby'],
+						'compare' => 'EXISTS',
+					),
+					array(
+						'key' => $course_meta_key,
+						'compare' => 'EXISTS',
+					),
+					);
+					$query_args['orderby'] = 'meta_value';
+					break;
+			}
+		}
+		if ( isset( $_REQUEST['order'] ) ) {
+			$query_args['order'] = $_REQUEST['order'];
 		}
 
 		$users = new WP_User_Query( $query_args );
@@ -390,8 +433,9 @@ class CoursePress_Helper_Table_CourseStudent extends WP_List_Table {
 	 *
 	 * @since 2.0.0
 	 */
-	public function column_certificates( $item ) {
+	public function column_certificates( $item_id ) {
 		$value = 'no';
+		$item = $this->get_student( $item_id );
 		if ( 'yes' == $item->data->certified ) {
 			$value = 'yes';
 		}
