@@ -7,6 +7,9 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+* Improved: Add individuall nonce when withdraw a student from a course.
+* Improved: Students list on course edit screen can by sorted by: username, display name, first name last name.
+* Improved: Students list on course edit screen is more like users list.
 
 = 2.0.7 =
 -------------------------------------------------
